# hfinder

./: INSTALL.md  README.md  README.predict.md  README.toolbox.md  README.train.md  hfinder.py  hfinder_classes.py  hfinder_dataset.py  hfinder_folders.py  hfinder_geometry.py  hfinder_hyphae.py  hfinder_imageinfo.py  hfinder_imageops.py  hfinder_log.py  hfinder_palette.py  hfinder_predict.py  hfinder_preprocess.py  hfinder_segmentation.py  hfinder_settings.json  hfinder_settings.py  hfinder_train.py  hfinder_utils.py  install.sh  pyproject.toml  requirements.txt  settings.json
data/: image-0003.tif  image-0004_nuclei.json  image-0005_nuclei.json  image-0006_nuclei.json  image-0007_nuclei.json
data/classes/: chloroplasts.json  cytoskeleton.json  hyphae.json  nuclei.json
doc/: prediction.md  toolbox.md
scripts/: annot2distances  annot2images  annot2signal  hfinder
sources/: hfinder_folders.py  hfinder_log.py  hfinder_palette.py  hfinder_settings.py
src/hfinder/: cli.py
src/hfinder/action/: __init__.py  dataset_split.py  predict.py  preprocess.py  train.py
src/hfinder/core/: __init__.py  geometry.py  hf_dataset.py  hf_folders.py  hf_geometry.py  hf_imageinfo.py  hf_imageops.py  hf_palette.py  hf_predict.py  hf_segmentation.py  hf_train.py  hf_utils.py  hfinder.py  hfinder_dataset.py  hfinder_folders.py  hfinder_geometry.py  hfinder_imageinfo.py  palette.py  (+8 more)
toolbox/: annot2distances.py  annot2enrichment.py  annot2images.py  annot2signal.py  json2image.py  visualize_predictions.py
weights/: hfinder-yolov8n-seg.yaml
yaml/: haustorium.yaml  multiclass.yaml
(+18 files in other folders)
